 * added Test for the h2 status handler
 * More POST and form upload tests with nghttp client
 * added POST tests in a http: proxied setup

v1.12.2
--------------------------------------------------------------------------------
 * Fixed keepalives counter on slave connections.

v1.12.1
--------------------------------------------------------------------------------
 * Fixed Bug introduce in v1.12.0 where mod_proxy_http2 no longer set the server name
   on new backend connections.
 * Fixed issue where mod_proxy_http2 would trigger an invalid internal state when retrying requests.
 * applied patch for #167 provided by Michael Kaufmann (@mkauf) about errors on
   HEAD requests (h2 streams not closed cleanly), for example those served by mod_cgid.

v1.12.0
--------------------------------------------------------------------------------
 * H2Upgrade can be configured per directory/location. Test case added.
 * H2Push can be disabled per directory/location. Test case added.
 * Configuration rework to open up several directives for use in locations and directories
   and .htaccess files.
 * Merging changes from httpd/trunk + httpd/branches/2.4.x to have a unified source again.

v1.11.4
--------------------------------------------------------------------------------
 * Changed cleanup strategy for slave connections.
 * Added test case for <https://bz.apache.org/bugzilla/show_bug.cgi?id=62654>
 * Adding an mpm check so that mod_http2 also compiles against Apache httpd trunk.

v1.11.3
--------------------------------------------------------------------------------
 * Adding defensive code for stream EOS handling, in case the request handler somehow
   missed to signal it the normal way. Should address #167 and #170. 
 
v1.11.2
--------------------------------------------------------------------------------
 * Fixed configure to no longer require ```libcurl-devel```, but only the ```curl```
   command with h2 support for testing.

v1.11.1